--- a/app/src/main/res/layout/day1_activity.xml
+++ b/app/src/main/res/layout/day1_activity.xml
@@ -84,6 +84,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -92,6 +93,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -101,6 +103,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -110,6 +113,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -141,6 +145,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -149,6 +154,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -158,6 +164,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -167,6 +174,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -198,6 +206,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -206,6 +215,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -215,6 +225,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -224,6 +235,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -255,6 +267,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -263,6 +276,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -272,6 +286,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -281,6 +296,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -312,6 +328,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -320,6 +337,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -329,6 +347,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -338,6 +357,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -369,6 +389,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -377,6 +398,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -386,6 +408,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -395,6 +418,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
