--- a/app/src/main/res/layout/day2_activity.xml
+++ b/app/src/main/res/layout/day2_activity.xml
@@ -14,19 +14,17 @@
             android:layout_margin="5dp" android:id="@+id/constraintLayout">
 
         <TextView
-                android:text="Squat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout1"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
                 android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/weight1" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
         <Button
                 android:text="0"
                 android:onClick="addRep"
@@ -34,16 +32,16 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/workout1set1"
                 app:layout_constraintTop_toBottomOf="@+id/workout1" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="set"/>
         <Button
                 android:text="0"
                 android:onClick="addRep"
-                android:layout_width="wrap_content"
+                android:layout_width="87dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout1set2"
                 app:layout_constraintTop_toBottomOf="@+id/workout1"
                 app:layout_constraintStart_toEndOf="@+id/workout1set1"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="set"/>
         <Button
                 android:text="0"
                 android:onClick="addRep"
@@ -52,7 +50,7 @@
                 android:id="@+id/workout1set3"
                 app:layout_constraintTop_toBottomOf="@+id/workout1"
                 app:layout_constraintStart_toEndOf="@+id/workout1set2"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="set"/>
         <Button
                 android:text="0"
                 android:onClick="addRep"
@@ -61,7 +59,7 @@
                 android:id="@+id/workout1set4"
                 app:layout_constraintTop_toBottomOf="@+id/workout1"
                 app:layout_constraintStart_toEndOf="@+id/workout1set3"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="set"/>
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -73,14 +71,12 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
         <TextView
-                android:text="Deadlift"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout2"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
                 android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -88,6 +84,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -96,6 +93,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -105,6 +103,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -114,6 +113,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -132,14 +132,12 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
 
         <TextView
-                android:text="Leg Press"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout3"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
                 android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -147,6 +145,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -155,6 +154,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -164,6 +164,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -173,6 +174,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -191,14 +193,12 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
 
         <TextView
-                android:text="Leg Curl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout4"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
                 android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -206,6 +206,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -214,6 +215,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -223,6 +225,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -232,6 +235,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -250,14 +254,12 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">
 
         <TextView
-                android:text="Calf Exercise (any)"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout5"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
                 android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -265,6 +267,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -273,6 +276,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -282,6 +286,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -291,6 +296,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -299,14 +305,15 @@
                 app:layout_constraintStart_toEndOf="@+id/workout5set3"
                 android:layout_marginStart="8dp"/>
     </android.support.constraint.ConstraintLayout>
+
     <Button
             android:text="Start Timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/startTimerBtn"
             app:layout_constraintStart_toEndOf="@+id/timerTV" android:layout_marginStart="12dp"
-            android:onClick="startTimer"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"/>
+            android:onClick="startTimer" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"/>
     <TextView
             android:text="30s"
             android:layout_width="wrap_content"
@@ -333,5 +340,5 @@
             android:id="@+id/setWgtBtn"
             app:layout_constraintEnd_toEndOf="parent"
             android:onClick="setWeight" android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"/>
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" android:layout_marginEnd="32dp"/>
 </android.support.constraint.ConstraintLayout>
