--- a/app/src/main/res/layout/day3_activity.xml
+++ b/app/src/main/res/layout/day3_activity.xml
@@ -14,18 +14,17 @@
             android:layout_margin="5dp" android:id="@+id/constraintLayout">
 
         <TextView
-                android:text="Incline Barbell Bench Press"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout1"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
+                android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/weight1" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:tag="weight"/>
+                app:layout_constraintTop_toTopOf="parent" />
         <Button
                 android:text="0"
                 android:onClick="addRep"
@@ -33,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/workout1set1"
                 app:layout_constraintTop_toBottomOf="@+id/workout1" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="set"/>
         <Button
                 android:text="0"
                 android:onClick="addRep"
@@ -42,7 +41,7 @@
                 android:id="@+id/workout1set2"
                 app:layout_constraintTop_toBottomOf="@+id/workout1"
                 app:layout_constraintStart_toEndOf="@+id/workout1set1"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="set"/>
         <Button
                 android:text="0"
                 android:onClick="addRep"
@@ -51,7 +50,7 @@
                 android:id="@+id/workout1set3"
                 app:layout_constraintTop_toBottomOf="@+id/workout1"
                 app:layout_constraintStart_toEndOf="@+id/workout1set2"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="set"/>
         <Button
                 android:text="0"
                 android:onClick="addRep"
@@ -60,7 +59,7 @@
                 android:id="@+id/workout1set4"
                 app:layout_constraintTop_toBottomOf="@+id/workout1"
                 app:layout_constraintStart_toEndOf="@+id/workout1set3"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="set"/>
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -72,14 +71,12 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
         <TextView
-                android:text="Flat Bench Dumbbell Fly"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout2"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
                 android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -87,6 +84,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -95,6 +93,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -104,6 +103,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -113,6 +113,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -131,14 +132,12 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
 
         <TextView
-                android:text="Seated Cable Row"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout3"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
                 android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -146,6 +145,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -154,6 +154,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -163,6 +164,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -172,6 +174,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -190,14 +193,12 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
 
         <TextView
-                android:text="One Arm Dumbbell Row"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout4"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
                 android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -205,6 +206,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -213,6 +215,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -222,6 +225,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -231,6 +235,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -249,14 +254,12 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">
 
         <TextView
-                android:text="Dumbbell Lateral Raise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout5"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
                 android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -264,6 +267,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -272,6 +276,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -281,6 +286,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -290,6 +296,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -308,14 +315,12 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
 
         <TextView
-                android:text="Seated Incline Dumbbell Curl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout6"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
                 android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -323,6 +328,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -331,6 +337,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="87dp"
                 android:layout_height="wrap_content"
@@ -340,6 +347,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -349,6 +357,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -367,14 +376,12 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">
 
         <TextView
-                android:text="Cable Tricep Extension"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/workout7"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"/>
+                android:layout_marginStart="8dp" android:tag="name"/>
         <TextView
-                android:text="TextView"
                 android:tag="weight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -382,6 +389,7 @@
                 app:layout_constraintTop_toTopOf="parent"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -390,6 +398,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -399,6 +408,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -408,6 +418,7 @@
                 android:layout_marginStart="8dp"/>
         <Button
                 android:text="0"
+                android:tag="set"
                 android:onClick="addRep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
